Se carga mantenedor de tareas

--- a/templates/base.html
+++ b/templates/base.html
@@ -211,7 +211,7 @@
               </a>
               <ul class="nav nav-treeview" style="display: none;">
                 <li class="nav-item">
-                  <a href="{% url 'admin' %}" class="nav-link {% if datos.menu == 'admin' %} active {% endif %}">
+                  <a href="{% url 'tasklist' %}" class="nav-link {% if datos.menu == 'tasklist' %} active {% endif %}">
                     <i class="far fa-circle nav-icon"></i>
                     <p>
                       Lista de tareas
