--- a/templates/users/newuser.html
+++ b/templates/users/newuser.html
@@ -38,7 +38,7 @@
                         <div class="row">
                             <div class="card">
                                 <div class="card-header"></div>
-                                <form method="post" action="{% if datos.menu == 'editusers' %} {% url 'updateusers' id=datos.user.rutUsuario %} {% endif %} {% if datos.menu == 'newuser' %} {% url 'createnewuser' %} {% endif %}">
+                                <form method="POST" action="{% if datos.menu == 'editusers' %} {% url 'updateusers' id=datos.user.rutUsuario %} {% endif %} {% if datos.menu == 'newuser' %} {% url 'createnewuser' %} {% endif %}">
                                     {% csrf_token %}
                                     <!-- card-body -->
                                     <div class="card card-body">
